add_library(actors
        SHARED
        common0.c
        common0_geo.c
        common1.c
        common1_geo.c
        group0.c
        group0_geo.c
        group10.c
        group10_geo.c
        group11.c
        group11_geo.c
        group12.c
        group12_geo.c
        group13.c
        group13_geo.c
        group14.c
        group14_geo.c
        group15.c
        group15_geo.c
        group16.c
        group16_geo.c
        group17.c
        group17_geo.c
        group1.c
        group1_geo.c
        group2.c
        group2_geo.c
        group3.c
        group3_geo.c
        group4.c
        group4_geo.c
        group5.c
        group5_geo.c
        group6.c
        group6_geo.c
        group7.c
        group7_geo.c
        group8.c
        group8_geo.c
        group9.c
        group9_geo.c
        )