add_library(levels
        SHARED
        ./jrb/script.c
        ./jrb/geo.c
        ./jrb/leveldata.c
        ./bbh/script.c
        ./bbh/geo.c
        ./bbh/leveldata.c
        ./castle_grounds/script.c
        ./castle_grounds/geo.c
        ./castle_grounds/leveldata.c
        ./ttc/script.c
        ./ttc/geo.c
        ./ttc/leveldata.c
        ./vcutm/script.c
        ./vcutm/geo.c
        ./vcutm/leveldata.c
        ./cotmc/script.c
        ./cotmc/geo.c
        ./cotmc/leveldata.c
        ./ending/script.c
        ./ending/geo.c
        ./ending/leveldata.c
        ./sa/script.c
        ./sa/geo.c
        ./sa/leveldata.c
        ./ddd/script.c
        ./ddd/geo.c
        ./ddd/leveldata.c
        ./bits/script.c
        ./bits/geo.c
        ./bits/leveldata.c
        ./bowser_2/script.c
        ./bowser_2/geo.c
        ./bowser_2/leveldata.c
        ./bowser_1/script.c
        ./bowser_1/geo.c
        ./bowser_1/leveldata.c
        ./ssl/script.c
        ./ssl/geo.c
        ./ssl/leveldata.c
        ./scripts.c
        ./bitdw/script.c
        ./bitdw/geo.c
        ./bitdw/leveldata.c
        ./wdw/script.c
        ./wdw/geo.c
        ./wdw/leveldata.c
        ./thi/script.c
        ./thi/geo.c
        ./thi/leveldata.c
        ./ttm/script.c
        ./ttm/geo.c
        ./ttm/leveldata.c
        ./totwc/script.c
        ./totwc/geo.c
        ./totwc/leveldata.c
        ./entry.c
        ./menu/script.c
        ./menu/geo.c
        ./menu/leveldata.c
        ./castle_inside/script.c
        ./castle_inside/geo.c
        ./castle_inside/leveldata.c
        ./castle_courtyard/script.c
        ./castle_courtyard/geo.c
        ./castle_courtyard/leveldata.c
        ./intro/script.c
        ./intro/geo.c
        ./intro/leveldata.c
        ./bob/script.c
        ./bob/geo.c
        ./bob/leveldata.c
        ./sl/script.c
        ./sl/geo.c
        ./sl/leveldata.c
        ./hmc/script.c
        ./hmc/geo.c
        ./hmc/leveldata.c
        ./rr/script.c
        ./rr/geo.c
        ./rr/leveldata.c
        ./pss/script.c
        ./pss/geo.c
        ./pss/leveldata.c
        ./ccm/script.c
        ./ccm/geo.c
        ./ccm/leveldata.c
        ./bowser_3/script.c
        ./bowser_3/geo.c
        ./bowser_3/leveldata.c
        ./bitfs/script.c
        ./bitfs/geo.c
        ./bitfs/leveldata.c
        ./wmotr/script.c
        ./wmotr/geo.c
        ./wmotr/leveldata.c
        ./wf/script.c
        ./wf/geo.c
        ./wf/leveldata.c
        ./lll/script.c
        ./lll/geo.c
        ./lll/leveldata.c
        )