add_library(real_os
        SHARED
        ./src/osViBlack.c
        ./src/osViSetEvent.c
        ./src/__osPiCreateAccessQueue.c
        ./src/osSetTimer.c
        ./src/osCreateMesgQueue.c
        ./src/guPerspectiveF.c
        ./src/guLookAtRef.c
        ./src/osEepromRead.c
        ./src/osPiRawStartDma.c
        ./src/NaN.c
        ./src/kdebugserver.c
        ./src/__osSpGetStatus.c
        ./src/osGetTime.c
        ./src/__osSpRawStartDma.c
        ./src/__osDevMgrMain.c
        ./src/__osViInit.c
        ./src/__osSiRawStartDma.c
        ./src/__osSpDeviceBusy.c
        ./src/ldiv.c
        ./src/osPiRawReadIo.c
        ./src/guRotateF.c
        ./src/osGetThreadPri.c
        ./src/osEepromWrite.c
        ./src/func_802F7140.c
        ./src/osSetTime.c
        ./src/_Ldtob.c
        ./src/sprintf.c
        ./src/math/llmuldiv.c
        ./src/math/llconv.c
        ./src/math/sinf.c
        ./src/math/cosf.c
        ./src/osViSetSpecialFeatures.c
        ./src/osCreateThread.c
        ./src/osPiStartDma.c
        ./src/osTimer.c
        ./src/__osViSwapContext.c
        ./src/osEepromLongRead.c
        ./src/osSendMesg.c
        ./src/guMtxF2L.c
        ./src/__osSiRawReadIo.c
        ./src/osCreatePiManager.c
        ./src/osLeoDiskInit.c
        ./src/string.c
        ./src/alBnkfNew.c
        ./src/osSetThreadPri.c
        ./src/osAiSetFrequency.c
        ./src/osJamMesg.c
        ./src/_Litob.c
        ./src/__osSpSetStatus.c
        ./src/guScaleF.c
        ./src/__osGetCurrFaultedThread.c
        ./src/osSpTaskYielded.c
        ./src/unk_stack_data.c
        ./src/__osSpSetPc.c
        ./src/osStartThread.c
        ./src/__osSiCreateAccessQueue.c
        ./src/osViSetMode.c
        ./src/osSetEventMesg.c
        ./src/_Printf.c
        ./src/osPiGetCmdQueue.c
        ./src/osSpTaskYield.c
        ./src/func_802F71A0.c
        ./src/osContInit.c
        ./src/__osDequeueThread.c
        ./src/__osSiDeviceBusy.c
        ./src/osViData.c
        ./src/guOrthoF.c
        ./src/guNormalize.c
        ./src/osDestroyThread.c
        ./src/__osAtomicDec.c
        ./src/osVirtualToPhysical.c
        ./src/osInitialize.c
        ./src/osRecvMesg.c
        ./src/osViSwapBuffer.c
        ./src/EU_D_802f4330.c
        ./src/__osAiDeviceBusy.c
        ./src/sqrtf.c
        ./src/__osSyncPutChars.c
        ./src/__osViGetCurrentContext.c
        ./src/osEepromLongWrite.c
        ./src/func_802F71F0.c
        ./src/D_802F4380.c
        ./src/__osSiRawWriteIo.c
        ./src/func_802F4A20.c
        ./src/guTranslateF.c
        ./src/osCreateViManager.c
        ./src/osEepromProbe.c
        ./src/osSpTaskLoadGo.c
        ./src/osAiGetLength.c
        ./src/osEPiRawStartDma.c
        ./src/osContStartReadData.c
        ./src/osViTable.c
        ./src/osAiSetNextBuffer.c
        )