add_library(game
        SHARED
        area.c
        behavior_actions.c
        camera.c
        crash_screen.c
        debug.c
        debug_course.c
        envfx_bubbles.c
        envfx_snow.c
        game_init.c
        geo_misc.c
        hud.c
        ingame_menu.c
        interaction.c
        level_geo.c
        level_update.c
        macro_special_objects.c
        main.c
        mario_actions_airborne.c
        mario_actions_automatic.c
        mario_actions_cutscene.c
        mario_actions_moving.c
        mario_actions_object.c
        mario_actions_stationary.c
        mario_actions_submerged.c
        mario.c
        mario_misc.c
        mario_step.c
        memory.c
        moving_texture.c
        obj_behaviors_2.c
        obj_behaviors.c
        object_collision.c
        object_helpers.c
        object_list_processor.c
        paintings.c
        platform_displacement.c
        print.c
        profiler.c
        rendering_graph_node.c
        save_file.c
        screen_transition.c
        shadow.c
        skybox.c
        sound_init.c
        spawn_object.c
        spawn_sound.c
        thread6.c
        )