add_library(goddard
        SHARED
        ./joints.c
        ./dynlist_proc.c
        #./renderer.c
        ./particles.c
        ./debug_utils.c
        ./gd_main.c
        ./skin_movement.c
        ./old_menu.c
        ./draw_objects.c
        ./shape_helper.c
        ./gd_memory.c
        ./gd_math.c
        ./objects.c
        ./sfx.c
        ./skin.c
        ./dynlists/anim_mario_mustache_left.c
        ./dynlists/dynlist_unused.c
        ./dynlists/anim_group_1.c
        ./dynlists/anim_mario_lips_2.c
        ./dynlists/dynlists_mario_eyebrows_mustache.c
        ./dynlists/anim_mario_eyebrows_1.c
        ./dynlists/dynlist_test_cube.c
        ./dynlists/anim_mario_lips_1.c
        ./dynlists/anim_mario_mustache_right.c
        ./dynlists/dynlists_mario_eyes.c
        ./dynlists/dynlist_mario_master.c
        ./dynlists/dynlist_mario_face.c
        ./dynlists/anim_group_2.c
        )